[gd_scene load_steps=8 format=3 uid="uid://hiex318b5cvk"]

[ext_resource type="Script" path="res://Scenes/GameMenu/GameMenu.gd" id="1_8lyul"]
[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://Resources/Theme/wc3_theme.tres" id="1_v8b77"]
[ext_resource type="PackedScene" uid="uid://bbrryq35rxvkv" path="res://Scenes/GameMenu/HintsMenu.tscn" id="3_vf4xx"]
[ext_resource type="PackedScene" uid="uid://cx86ea3loo8a2" path="res://Scenes/GameMenu/SettingsMenu.tscn" id="5_y1l7h"]
[ext_resource type="PackedScene" uid="uid://vno2fc0bkyjw" path="res://Scenes/GameMenu/QuitMenu.tscn" id="6_mcdyf"]
[ext_resource type="PackedScene" uid="uid://d58y3fnrkntu" path="res://Scenes/GameMenu/HelpMenu.tscn" id="6_q6xgl"]

[sub_resource type="ButtonGroup" id="ButtonGroup_di8qs"]

[node name="GameMenu" type="VBoxContainer" node_paths=PackedStringArray("_tab_container")]
theme = ExtResource("1_v8b77")
script = ExtResource("1_8lyul")
_tab_container = NodePath("TabContainer")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
tabs_visible = false

[node name="MainTab" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/MainTab"]
layout_mode = 2

[node name="HelpButton" type="Button" parent="TabContainer/MainTab/VBoxContainer"]
layout_mode = 2
text = "Help"

[node name="HintsButton" type="Button" parent="TabContainer/MainTab/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Hints"

[node name="SettingsButton" type="Button" parent="TabContainer/MainTab/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Settings"

[node name="QuitButton" type="Button" parent="TabContainer/MainTab/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="Spacer" type="VBoxContainer" parent="TabContainer/MainTab/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="TabContainer/MainTab/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="HelpMenu" parent="TabContainer" instance=ExtResource("6_q6xgl")]
visible = false
layout_mode = 2

[node name="HintsMenu" parent="TabContainer" instance=ExtResource("3_vf4xx")]
visible = false
layout_mode = 2

[node name="SettingsMenu" parent="TabContainer" instance=ExtResource("5_y1l7h")]
visible = false
layout_mode = 2
_interface_size_button_group = SubResource("ButtonGroup_di8qs")

[node name="QuitMenu" parent="TabContainer" instance=ExtResource("6_mcdyf")]
visible = false
layout_mode = 2

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="pressed" from="TabContainer/MainTab/VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="TabContainer/MainTab/VBoxContainer/HintsButton" to="." method="_on_hints_button_pressed"]
[connection signal="pressed" from="TabContainer/MainTab/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TabContainer/MainTab/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="TabContainer/MainTab/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="hidden" from="TabContainer/HelpMenu" to="." method="_on_help_menu_hidden"]
[connection signal="closed" from="TabContainer/HintsMenu" to="." method="_on_hints_menu_closed"]
[connection signal="cancel_pressed" from="TabContainer/SettingsMenu" to="." method="_on_settings_menu_cancel_pressed"]
[connection signal="ok_pressed" from="TabContainer/SettingsMenu" to="." method="_on_settings_menu_ok_pressed"]
[connection signal="cancel_pressed" from="TabContainer/QuitMenu" to="." method="_on_quit_menu_cancel_pressed"]
[connection signal="go_to_title_pressed" from="TabContainer/QuitMenu" to="." method="_on_quit_menu_go_to_title_pressed"]
[connection signal="quit_game_pressed" from="TabContainer/QuitMenu" to="." method="_on_quit_menu_quit_game_pressed"]
